[gd_scene load_steps=7 format=3 uid="uid://bosljrq8vvf0o"]

[ext_resource type="Script" uid="uid://oqturtxa1ync" path="res://Scripts/CardSlot.gd" id="1_mt86f"]
[ext_resource type="Texture2D" uid="uid://bw0mjwj4lbxqk" path="res://images/mortero.png" id="2_iqweo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wk5el"]
size = Vector2(240, 240)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mt86f"]
bg_color = Color(0.4, 0.15, 0.07, 1)
border_color = Color(0.1, 0.05, 0.02, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqweo"]
bg_color = Color(0.2, 0.15, 0.07, 1)
border_color = Color(0.1, 0.05, 0.02, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ii1km"]
bg_color = Color(0.3, 0.2, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.15, 0.1, 0.05, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_top = 6.0
expand_margin_right = 6.0
expand_margin_bottom = 6.0

[node name="CardSlot" type="Node2D"]
script = ExtResource("1_mt86f")

[node name="CardSlotImage" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-06, 0)
scale = Vector2(0.234375, 0.234375)
texture = ExtResource("2_iqweo")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wk5el")

[node name="StartButton" type="Button" parent="."]
unique_name_in_owner = true
z_index = 1
offset_left = -24.0
offset_top = 72.0
offset_right = 22.0
offset_bottom = 103.0
theme_override_styles/hover = SubResource("StyleBoxFlat_mt86f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iqweo")
theme_override_styles/normal = SubResource("StyleBoxFlat_ii1km")
disabled = true
text = "Start"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ProgressCircle" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
fill_mode = 4

[connection signal="button_up" from="StartButton" to="." method="_on_start_button_button_up"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
